Initial move of Bay, Bays, Data, and Typs to same package. IDEA Cleanup