@@ -1,20 +1,29 @@
 /*
- * Copyright (c) 2021 - The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2021-2025 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
  * MegaMek is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
+ * it under the terms of the GNU General Public License (GPL),
+ * version 3 or (at your option) any later version,
+ * as published by the Free Software Foundation.
  *
  * MegaMek is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
- * GNU General Public License for more details.
+ * but WITHOUT ANY WARRANTY; without even the implied warranty
+ * of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+ * See the GNU General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
- * along with MegaMek. If not, see <http://www.gnu.org/licenses/>.
+ * A copy of the GPL should have been included with this project;
+ * if not, see <https://www.gnu.org/licenses/>.
+ *
+ * NOTICE: The MegaMek organization is a non-profit group of volunteers
+ * creating free software for the BattleTech community.
+ *
+ * MechWarrior, BattleMech, `Mech and AeroTech are registered trademarks
+ * of The Topps Company, Inc. All Rights Reserved.
+ *
+ * Catalyst Game Labs and the Catalyst Game Labs logo are trademarks of
+ * InMediaRes Productions, LLC.
  */
 package megamek.client.ui.swing.lobby;
 
@@ -30,7 +39,6 @@ import static megamek.client.ui.swing.lobby.LobbyUtility.sameNhC3System;
 import java.awt.Dimension;
 import java.util.*;
 import java.util.Map.Entry;
-
 import javax.swing.JFrame;
 import javax.swing.JOptionPane;
 
@@ -50,6 +58,7 @@ import megamek.client.ui.swing.GUIPreferences;
 import megamek.client.ui.swing.UnitEditorDialog;
 import megamek.client.ui.swing.dialog.MMConfirmDialog;
 import megamek.common.*;
+import megamek.common.bays.Bay;
 import megamek.common.enums.Gender;
 import megamek.common.force.Force;
 import megamek.common.force.Forces;
@@ -60,8 +69,7 @@ import megamek.common.util.CollectionUtil;
 import megamek.logging.MMLogger;
 
 /**
- * This class contains the methods that perform entity and force changes from
- * the pop-up menu and elsewhere.
+ * This class contains the methods that perform entity and force changes from the pop-up menu and elsewhere.
  */
 public class LobbyActions {
     private static final MMLogger logger = MMLogger.create(LobbyActions.class);
@@ -71,16 +79,14 @@ public class LobbyActions {
     private String cmdSelectedTab = null; // TODO: required?
 
     /**
-     * This class contains the methods that perform entity and force changes from
-     * the pop-up menu and elsewhere.
+     * This class contains the methods that perform entity and force changes from the pop-up menu and elsewhere.
      */
     LobbyActions(ChatLounge cl) {
         lobby = cl;
     }
 
     /**
-     * Sets a deployment round for the given entities. Sends an update to the
-     * server.
+     * Sets a deployment round for the given entities. Sends an update to the server.
      */
     void applyDeployment(Collection<Entity> entities, int newRound) {
         if (!validateUpdate(entities)) {
@@ -116,8 +122,7 @@ public class LobbyActions {
     }
 
     /**
-     * Sets/removes hidden deployment for the given entities. Sends an update to the
-     * server.
+     * Sets/removes hidden deployment for the given entities. Sends an update to the server.
      */
     void applyHidden(Collection<Entity> entities, boolean newHidden) {
         if (!validateUpdate(entities)) {
@@ -147,8 +152,9 @@ public class LobbyActions {
         boolean goHullDown = info.equals(LMP_HULLDOWN);
         boolean stand = !goProne && !goHullDown;
         for (Entity entity : entities) {
-            if ((goProne && !entity.isProne()) || (goHullDown && !entity.isHullDown())
-                    || (stand && (entity.isProne() || entity.isHullDown()))) {
+            if ((goProne && !entity.isProne()) ||
+                      (goHullDown && !entity.isHullDown()) ||
+                      (stand && (entity.isProne() || entity.isHullDown()))) {
                 entity.setProne(goProne);
                 entity.setHullDown(goHullDown);
                 updateCandidates.add(entity);
@@ -158,14 +164,12 @@ public class LobbyActions {
     }
 
     /**
-     * Attaches the given force as a subforce to the given new parent.
-     * Does NOT work for newParentId == NO_FORCE. Use promoteForce to do this.
-     * Does not allow attaching a force to one of its own subforces.
+     * Attaches the given force as a sub force to the given new parent. Does NOT work for newParentId == NO_FORCE. Use
+     * promoteForce to do this. Does not allow attaching a force to one of its own forces.
      */
     void forceAttach(int forceId, int newParentId) {
         Forces forces = game().getForces();
-        if (!forces.contains(forceId) || !forces.contains(newParentId)
-                || (forceId == newParentId)) {
+        if (!forces.contains(forceId) || !forces.contains(newParentId) || (forceId == newParentId)) {
             return;
         }
 
@@ -223,8 +227,7 @@ public class LobbyActions {
     }
 
     /**
-     * Moves a force or entity within another force by one position. If up is true,
-     * moves upward, otherwise downward.
+     * Moves a force or entity within another force by one position. If up is true, moves upward, otherwise downward.
      */
     void forceMove(Collection<Force> forceList, Collection<Entity> entityList, boolean up) {
         // May only move a single force or a single entity
@@ -261,9 +264,8 @@ public class LobbyActions {
     }
 
     /**
-     * Displays a CamoChooser to choose an individual camo for the given entities.
-     * The camo will only be applied to units configurable by the local player,
-     * i.e. his own units or those of his bots.
+     * Displays a CamoChooser to choose an individual camo for the given entities. The camo will only be applied to
+     * units configurable by the local player, i.e. his own units or those of his bots.
      */
     public void individualCamo(Collection<Entity> entities) {
         if (!validateUpdate(entities)) {
@@ -311,7 +313,7 @@ public class LobbyActions {
 
         CustomMekDialog cmd = new CustomMekDialog(lobby.getClientgui(), client, new ArrayList<>(entities), editable);
         cmd.setSize(new Dimension(GUIPreferences.getInstance().getCustomUnitWidth(),
-                GUIPreferences.getInstance().getCustomUnitHeight()));
+              GUIPreferences.getInstance().getCustomUnitHeight()));
         cmd.setTitle(Messages.getString("ChatLounge.CustomizeUnits"));
         cmd.setVisible(true);
         GUIPreferences.getInstance().setCustomUnitHeight(cmd.getSize().height);
@@ -347,7 +349,7 @@ public class LobbyActions {
             entities.add(entity);
             CustomMekDialog cmd = new CustomMekDialog(lobby.getClientgui(), client, entities, editable);
             cmd.setSize(new Dimension(GUIPreferences.getInstance().getCustomUnitWidth(),
-                    GUIPreferences.getInstance().getCustomUnitHeight()));
+                  GUIPreferences.getInstance().getCustomUnitHeight()));
             cmd.refreshOptions();
             cmd.refreshQuirks();
             cmd.refreshPartReps();
@@ -386,11 +388,8 @@ public class LobbyActions {
     }
 
     /**
-     * For use after customization in the unit configuration dialog. Checks the
-     * given list
-     * of units for dependents (transported/contained units/C3 connections) and
-     * sends an update
-     * for all to the Server.
+     * For use after customization in the unit configuration dialog. Checks the given list of units for dependents
+     * (transported/contained units/C3 connections) and sends an update for all to the Server.
      *
      * @param entities The units that were configured
      */
@@ -398,12 +397,11 @@ public class LobbyActions {
         Set<Entity> updateCandidates = new HashSet<>(entities);
         for (Entity entity : entities) {
             // If a LAM with mechanized BA was changed to non-mek mode, unload the BA.
-            if ((entity instanceof LandAirMek)
-                    && entity.getConversionMode() != LandAirMek.CONV_MODE_MEK) {
-                for (Entity loadee : entity.getLoadedUnits()) {
-                    entity.unload(loadee);
-                    loadee.setTransportId(Entity.NONE);
-                    updateCandidates.add(loadee);
+            if ((entity instanceof LandAirMek) && entity.getConversionMode() != LandAirMek.CONV_MODE_MEK) {
+                for (Entity loaded : entity.getLoadedUnits()) {
+                    entity.unload(loaded);
+                    loaded.setTransportId(Entity.NONE);
+                    updateCandidates.add(loaded);
                 }
             }
 
@@ -428,8 +426,8 @@ public class LobbyActions {
                 }
             }
             // Do we need to update the members of our C3 network?
-            if (((c3master != null) && !c3master.equals(entity.getC3Master()))
-                    || ((c3master == null) && (entity.getC3Master() != null))) {
+            if (((c3master != null) && !c3master.equals(entity.getC3Master())) ||
+                      ((c3master == null) && (entity.getC3Master() != null))) {
                 updateCandidates.addAll(c3members);
             }
         }
@@ -437,8 +435,7 @@ public class LobbyActions {
     }
 
     /**
-     * Sets random skills for the given entities, as far as they can
-     * be configured by the local player.
+     * Sets random skills for the given entities, as far as they can be configured by the local player.
      */
     void setRandomSkills(Collection<Entity> entities) {
         if (!validateUpdate(entities)) {
@@ -452,8 +449,7 @@ public class LobbyActions {
     }
 
     /**
-     * Sets random names for the given entities' pilots, as far as they can
-     * be configured by the local player.
+     * Sets random names for the given entities' pilots, as far as they can be configured by the local player.
      */
     void setRandomNames(Collection<Entity> entities) {
         if (!validateUpdate(entities)) {
@@ -463,16 +459,16 @@ public class LobbyActions {
             for (int i = 0; i < e.getCrew().getSlotCount(); i++) {
                 Gender gender = RandomGenderGenerator.generate();
                 e.getCrew().setGender(gender, i);
-                e.getCrew().setName(RandomNameGenerator.getInstance().generate(gender, e.getCrew().isClanPilot(i),
-                        e.getOwner().getName()), i);
+                e.getCrew()
+                      .setName(RandomNameGenerator.getInstance()
+                                     .generate(gender, e.getCrew().isClanPilot(i), e.getOwner().getName()), i);
             }
         }
         sendUpdates(entities);
     }
 
     /**
-     * Sets random callsigns for the given entities' pilots, as far as they can
-     * be configured by the local player.
+     * Sets random call signs for the given entities' pilots, as far as they can be configured by the local player.
      */
     void setRandomCallsigns(Collection<Entity> entities) {
         if (!validateUpdate(entities)) {
@@ -518,8 +514,7 @@ public class LobbyActions {
     }
 
     /**
-     * Asks for a name and creates a new top-level force of that name with the
-     * selected entities in it.
+     * Asks for a name and creates a new top-level force of that name with the selected entities in it.
      */
     void forceCreateFrom(Collection<Entity> entities) {
         if (!validateUpdate(entities)) {
@@ -535,12 +530,11 @@ public class LobbyActions {
             return;
         }
         client().sendAddForce(Force.createToplevelForce(name, CollectionUtil.anyOneElement(entities).getOwner()),
-                entities);
+              entities);
     }
 
     /**
-     * Asks for a name and creates a new subforce of that name for the force given
-     * as the parentId.
+     * Asks for a name and creates a new sub force of that name for the force given as the parentId.
      */
     void forceCreateSub(int parentId) {
         if (parentId == Force.NO_FORCE) {
@@ -564,7 +558,7 @@ public class LobbyActions {
         Set<Entity> updateCandidates = new HashSet<>();
         for (Entity entity : entities) {
             for (Mounted<?> m : entity.getWeaponList()) {
-                if (((WeaponType) m.getType()).hasFlag(WeaponType.F_MG)) {
+                if (m.getType().hasFlag(WeaponType.F_MG)) {
                     m.setRapidfire(burstOn);
                     updateCandidates.add(entity);
                 }
@@ -584,8 +578,7 @@ public class LobbyActions {
     }
 
     /**
-     * Toggles hot loading LRMs for the given entities to the state given as
-     * hotLoadOn
+     * Toggles hot loading LRMs for the given entities to the state given as hotLoadOn
      */
     void toggleHotLoad(Collection<Entity> entities, boolean hotLoadOn) {
         if (!validateUpdate(entities)) {
@@ -594,7 +587,7 @@ public class LobbyActions {
         Set<Entity> updateCandidates = new HashSet<>();
         for (Entity entity : entities) {
             for (Mounted<?> m : entity.getAmmo()) {
-                // setHotLoad checks the Ammo to see if it can be hotloaded
+                // setHotLoad checks the Ammo to see if it can be hot loaded
                 m.setHotLoad(hotLoadOn);
                 // TODO: The following should ideally be part of setHotLoad in Mounted
                 if (hotLoadOn) {
@@ -629,8 +622,9 @@ public class LobbyActions {
         // possible
         // as a single server update and updates for one unit shouldn't be chained.
         Set<Entity> carriers = entities.stream()
-                .filter(e -> e.getTransportId() != Entity.NONE)
-                .map(e -> game().getEntity(e.getTransportId())).collect(toSet());
+                                     .filter(e -> e.getTransportId() != Entity.NONE)
+                                     .map(e -> game().getEntity(e.getTransportId()))
+                                     .collect(toSet());
         if (!Collections.disjoint(entities, carriers)) {
             LobbyErrors.showNoDualLoad(frame());
             return;
@@ -643,14 +637,20 @@ public class LobbyActions {
 
         StringBuilder errorMsg = new StringBuilder();
         if (!LobbyUtility.validateLobbyLoad(entities, loader, bayNumber, loadRear, errorMsg)) {
-            JOptionPane.showMessageDialog(frame(), errorMsg.toString(),
-                    Messages.getString("LoadingBay.error"), JOptionPane.ERROR_MESSAGE);
+            JOptionPane.showMessageDialog(frame(),
+                  errorMsg.toString(),
+                  Messages.getString("LoadingBay.error"),
+                  JOptionPane.ERROR_MESSAGE);
             return;
         }
 
         for (Entity e : entities) {
             if (e.getTransportId() != Entity.NONE) {
                 Entity formerLoader = game().getEntity(e.getTransportId());
+                if (formerLoader == null) {
+                    continue;
+                }
+
                 Set<Entity> updateCandidates = new HashSet<>();
                 lobby.disembark(e, updateCandidates);
                 if (!updateCandidates.isEmpty()) {
@@ -662,28 +662,26 @@ public class LobbyActions {
     }
 
     /**
-     *
      * @param trailer Entity to be towed
-     * @param info
+     * @param info    Information for logging
      */
     public void tow(Entity trailer, String info) {
         StringTokenizer sTow = new StringTokenizer(info, ":");
         int tractorId = Integer.parseInt(sTow.nextToken());
         Entity tractor = game().getEntity(tractorId);
-        // Remove those entities from the candidates
-        // that are already carried by that tractor/trailer
-        if (trailer == null || tractor == null || trailer.getTractor() == tractorId
-            || tractor.getTowing() != Entity.NONE || tractor.getTractor() == trailer.getId()) {
+        // Remove those entities from the candidates that are already carried by that tractor/trailer
+        if (trailer == null ||
+                  tractor == null ||
+                  trailer.getTractor() == tractorId ||
+                  tractor.getTowing() != Entity.NONE ||
+                  tractor.getTractor() == trailer.getId()) {
             return;
         }
 
-        // If a unit of the selected units is currently
-        // towed by another, 2nd unit of the selected
-        // units, do not continue. The player should
-        // detach units first. This would require a
-        // server update detaching that second unit AND
-        // re-attaching it. Currently not possible as a single
-        // server update and updates for one unit shouldn't be chained.
+        // If a unit of the selected units is currently towed by another, 2nd unit of the selected units, do not
+        // continue. The player should detach units first. This would require a server update detaching that second
+        // unit AND re-attaching it. Currently not possible as a single server update and updates for one unit
+        // shouldn't be chained.
         if (tractor.getTowing() != Entity.NONE && trailer.getTractor() != Entity.NONE) {
             LobbyErrors.showNoDualTow(frame());
         }
@@ -716,20 +714,21 @@ public class LobbyActions {
     }
 
     /**
-     * Deletes the given forces and entities. Asks for confirmation if confirm is
-     * true.
+     * Deletes the given forces and entities. Asks for confirmation if confirm is true.
      */
     void delete(Collection<Force> foDelete, Collection<Entity> enDelete, boolean confirm) {
         Forces forces = game().getForces();
-        // Remove redundant forces = subforces of other forces in the list
+        // Remove redundant forces = forces of other forces in the list
         Set<Force> allSubForces = new HashSet<>();
         foDelete.forEach(f -> allSubForces.addAll(forces.getFullSubForces(f)));
         foDelete.removeIf(allSubForces::contains);
         Set<Force> finalFoDelete = new HashSet<>(foDelete);
         // Remove redundant entities = entities in the given forces
         Set<Entity> inForces = new HashSet<>();
-        foDelete.stream().map(forces::getFullEntities).map(ForceAssignable::filterToEntityList)
-                .forEach(inForces::addAll);
+        foDelete.stream()
+              .map(forces::getFullEntities)
+              .map(ForceAssignable::filterToEntityList)
+              .forEach(inForces::addAll);
         enDelete.removeIf(inForces::contains);
         Set<Entity> finalEnDelete = new HashSet<>(enDelete);
 
@@ -758,32 +757,32 @@ public class LobbyActions {
             }
         }
 
-        // Send a command to remove the forceless entities
+        // Send a command to remove the force-less entities
         Set<Client> senders = finalEnDelete.stream().map(this::correctSender).collect(toSet());
         for (Client sender : senders) {
             // Gather the entities for this sending client;
             // Serialization doesn't like the toList() result, therefore the new ArrayList
-            List<Integer> ids = new ArrayList<>(finalEnDelete.stream()
-                    .filter(e -> correctSender(e).equals(sender)).map(Entity::getId).collect(toList()));
+            List<Integer> ids = finalEnDelete.stream()
+                                      .filter(e -> Objects.equals(correctSender(e), sender))
+                                      .map(Entity::getId)
+                                      .collect(java.util.stream.Collectors.toList());
             sender.sendDeleteEntities(ids);
         }
 
         // Send a command to remove the forces (with entities)
         senders = finalFoDelete.stream().map(this::correctSender).collect(toSet());
         for (Client sender : senders) {
-            List<Force> foList = new ArrayList<>(finalFoDelete.stream()
-                    .filter(f -> correctSender(f).equals(sender))
-                    .collect(toList()));
+            List<Force> foList = finalFoDelete.stream()
+                                       .filter(f -> Objects.equals(correctSender(f), sender))
+                                       .collect(java.util.stream.Collectors.toList());
             sender.sendDeleteForces(foList);
         }
     }
 
     /**
-     * Removes the given entities from their force(s), making them force-less.
-     * Entities must have a single owner and be editable (local units or local bot's
-     * units)
-     * (Having multiple owners makes sending updates correctly for one's own bots
-     * difficult)
+     * Removes the given entities from their force(s), making them force-less. Entities must have a single owner and be
+     * editable (local units or local bot's units) (Having multiple owners makes sending updates correctly for one's own
+     * bots difficult)
      */
     void forceRemoveEntity(Collection<Entity> entities) {
         if (!validateUpdate(entities)) {
@@ -793,8 +792,7 @@ public class LobbyActions {
     }
 
     /**
-     * Swaps pilots between the given entity
-     * and another entity of the given id
+     * Swaps pilots between the given entity and another entity of the given id
      */
     void swapPilots(Collection<Entity> entities, int targetId) {
         Entity target = game().getEntity(targetId);
@@ -816,10 +814,8 @@ public class LobbyActions {
     }
 
     /**
-     * Disconnects the passed entities from their C3 network, if any.
-     * Due to the way C3 networks are represented in Entity, units
-     * cannot disconnect from a C3 network with an id that is the
-     * entity's own id.
+     * Disconnects the passed entities from their C3 network, if any. Due to the way C3 networks are represented in
+     * Entity, units cannot disconnect from a C3 network with an id that is the entity's own id.
      */
     void c3DisconnectFromNetwork(Collection<Entity> entities) {
         if (!validateUpdate(entities)) {
@@ -830,24 +826,28 @@ public class LobbyActions {
     }
 
     /**
-     * Performs a disconnect from C3 networks for the given entities without sending
-     * an update.
-     * Returns a set of all affected units.
+     * Performs a disconnect from C3 networks for the given entities without sending an update. Returns a set of all
+     * affected units.
      */
     private HashSet<Entity> performDisconnect(Collection<Entity> entities) {
+        HashSet<Entity> updateCandidates = disconnectedButNotNotifiedC3Clients(entities);
+        // Also disconnect all units connected *to* that entity
+        for (Entity entity : game().getEntitiesVector()) {
+            if (entities.contains(entity.getC3Master())) {
+                entity.setC3Master(null, true);
+                updateCandidates.add(entity);
+            }
+        }
+        return updateCandidates;
+    }
+
+    public static HashSet<Entity> disconnectedButNotNotifiedC3Clients(Collection<Entity> entities) {
         HashSet<Entity> updateCandidates = new HashSet<>();
         for (Entity entity : entities) {
             if (entity.hasNhC3()) {
                 entity.setC3NetIdSelf();
                 updateCandidates.add(entity);
             } else if (entity.hasAnyC3System()) {
-                entity.setC3Master(null, true);
-                updateCandidates.add(entity);
-            }
-        }
-        // Also disconnect all units connected *to* that entity
-        for (Entity entity : game().getEntitiesVector()) {
-            if (entities.contains(entity.getC3Master())) {
                 entity.setC3Master(null, true);
                 updateCandidates.add(entity);
             }
@@ -882,8 +882,7 @@ public class LobbyActions {
     }
 
     /**
-     * Connects the passed entities to a nonhierarchic C3 (NC3, C3i or Nova CEWS)
-     * identified by masterID.
+     * Connects the passed entities to a non-hierarchic C3 (NC3, C3i or Nova CEWS) identified by masterID.
      */
     void c3JoinNh(Collection<Entity> entities, int masterID, boolean disconnectFirst) {
         if (!validateUpdate(entities)) {
@@ -893,30 +892,36 @@ public class LobbyActions {
             LobbyErrors.showOnlyTeam(frame());
             return;
         }
+
         Entity master = game().getEntity(masterID);
-        if (!master.hasNhC3() || !entities.stream().allMatch(e -> sameNhC3System(master, e))) {
-            LobbyErrors.showSameC3(frame());
-            return;
+        if (master != null) {
+            if (!master.hasNhC3() || !entities.stream().allMatch(e -> sameNhC3System(master, e))) {
+                LobbyErrors.showSameC3(frame());
+                return;
+            }
+            if (disconnectFirst) {
+                performDisconnect(entities);
+            }
+            int freeNodes = master.calculateFreeC3Nodes();
+            freeNodes += entities.contains(master) ? 1 : 0;
+            if (entities.size() > freeNodes) {
+                LobbyErrors.showExceedC3Capacity(frame());
+                return;
+            }
         }
-        if (disconnectFirst) {
-            performDisconnect(entities);
-        }
-        int freeNodes = master.calculateFreeC3Nodes();
-        freeNodes += entities.contains(master) ? 1 : 0;
-        if (entities.size() > freeNodes) {
-            LobbyErrors.showExceedC3Capacity(frame());
-            return;
-        }
+
         entities.forEach(e -> e.setC3NetId(master));
         sendUpdates(entities);
     }
 
     /**
-     * Connects the passed entities to a standard C3M
-     * identified by masterID.
+     * Connects the passed entities to a standard C3M identified by masterID.
      */
     void c3Connect(Collection<Entity> entities, int masterID, boolean disconnectFirst) {
         Entity master = game().getEntity(masterID);
+        if (master == null) {
+            return;
+        }
         // To make it possible to mark a C3S/C3S/C3S/C3M lance and connect it:
         entities.remove(master);
         if (!validateUpdate(entities)) {
@@ -936,7 +941,7 @@ public class LobbyActions {
         Set<Entity> updateCandidates = new HashSet<>(entities);
         if (disconnectFirst) { // this is only true when a C3 lance is formed from SSSM
             updateCandidates.addAll(performDisconnect(entities));
-            updateCandidates.addAll(performDisconnect(Arrays.asList(master)));
+            updateCandidates.addAll(performDisconnect(List.of(master)));
         }
         int newC3nodeCount = entities.stream().mapToInt(e -> game().getC3SubNetworkMembers(e).size()).sum();
         int masC3nodeCount = game().getC3NetworkMembers(master).size();
@@ -949,8 +954,8 @@ public class LobbyActions {
     }
 
     /**
-     * Change the given entities' controller to the player with ID newOwnerId.
-     * If the given forceList is not empty, an error message will be shown.
+     * Change the given entities' controller to the player with ID newOwnerId. If the given forceList is not empty, an
+     * error message will be shown.
      */
     void changeOwner(Collection<Entity> entities, Collection<Force> forceList, int newOwnerId) {
         if (entities.isEmpty() || game().getPlayer(newOwnerId) == null) {
@@ -970,17 +975,13 @@ public class LobbyActions {
      */
     void changeTeam(Collection<Player> players, int team) {
         var toSend = new HashSet<Player>();
-        players.stream()
-                .filter(this::isSelfOrLocalBot)
-                .filter(p -> p.getTeam() != team)
-                .forEach(toSend::add);
+        players.stream().filter(this::isSelfOrLocalBot).filter(p -> p.getTeam() != team).forEach(toSend::add);
         client().sendChangeTeam(toSend, team);
     }
 
     /**
-     * Add the entities to the force if admissible (the entities must all be
-     * editable
-     * by the local player and be allied to the force's owner.
+     * Add the entities to the force if admissible. The entities must all be editable by the local player and be allied
+     * to the force's owner.
      */
     void forceAddEntity(Collection<Entity> entities, int forceId) {
         if (forceId == Force.NO_FORCE) {
@@ -999,12 +1000,10 @@ public class LobbyActions {
     }
 
     /**
-     * Changes the owner of the given forces to a different player without
-     * affecting force structure.
-     * When assigning the force only to an enemy, it would dislodge that force
-     * from its parent and dislodge all units from it and leave it an empty
-     * force for the enemy. That seems useless. Therefore this is restricted
-     * to only assign to team members of the former owner.
+     * Changes the owner of the given forces to a different player without affecting force structure. When assigning the
+     * force only to an enemy, it would dislodge that force from its parent and dislodge all units from it and leave it
+     * an empty force for the enemy. That seems useless. Therefore, this is restricted to only assign to team members of
+     * the former owner.
      */
     void forceAssignOnly(Collection<Force> forceList, int newOwnerId) {
         if (newOwnerId == Player.PLAYER_NONE) {
@@ -1031,8 +1030,7 @@ public class LobbyActions {
     }
 
     /**
-     * Changes the owner of the given forces to a different player together with
-     * all subforces and units.
+     * Changes the owner of the given forces to a different player together with all forces and units.
      */
     void forceAssignFull(Collection<Force> forceList, int newOwnerId) {
         if (newOwnerId == Player.PLAYER_NONE) {
@@ -1055,7 +1053,7 @@ public class LobbyActions {
             return;
         }
         Entity carrier = CollectionUtil.anyOneElement(entities);
-        if (!validateUpdate(Arrays.asList(carrier))) {
+        if (!validateUpdate(Collections.singletonList(carrier))) {
             return;
         }
         Bay bay = carrier.getBayById(bayId);
@@ -1064,16 +1062,15 @@ public class LobbyActions {
             return;
         }
         Set<Entity> updateCandidates = new HashSet<>();
-        for (Entity loadee : bay.getLoadedUnits()) {
-            lobby.disembark(loadee, updateCandidates);
+        for (Entity loaded : bay.getLoadedUnits()) {
+            lobby.disembark(loaded, updateCandidates);
         }
         sendUpdates(updateCandidates);
     }
 
     /**
-     * Creates a fighter squadron from the given list of entities.
-     * Checks if all entities are fighters and if the number of entities
-     * does not exceed squadron capacity. Asks for a squadron name.
+     * Creates a fighter squadron from the given list of entities. Checks if all entities are fighters and if the number
+     * of entities does not exceed squadron capacity. Asks for a squadron name.
      */
     void createSquadron(Collection<Entity> entities) {
         if (!validateUpdate(entities)) {
@@ -1088,8 +1085,8 @@ public class LobbyActions {
             return;
         }
         boolean largeSquadrons = game().getOptions().booleanOption(OptionsConstants.ADVAERORULES_ALLOW_LARGE_SQUADRONS);
-        if ((!largeSquadrons && entities.size() > FighterSquadron.MAX_SIZE)
-                || entities.size() > FighterSquadron.ALTERNATE_MAX_SIZE) {
+        if ((!largeSquadrons && entities.size() > FighterSquadron.MAX_SIZE) ||
+                  entities.size() > FighterSquadron.ALTERNATE_MAX_SIZE) {
             LobbyErrors.showSquadronTooMany(frame());
         }
 
@@ -1102,15 +1099,14 @@ public class LobbyActions {
         // Now, actually create the squadron
         FighterSquadron fs = new FighterSquadron(name);
         fs.setOwner(createSquadronOwner(entities));
-        List<Integer> fighterIds = new ArrayList<>(entities.stream().map(Entity::getId).collect(toList()));
-        correctSender(fs).sendAddSquadron(fs, fighterIds);
+        List<Integer> fighterIds = entities.stream().map(Entity::getId).collect(java.util.stream.Collectors.toList());
+        Objects.requireNonNull(correctSender(fs)).sendAddSquadron(fs, fighterIds);
     }
 
     /**
-     * Returns a likely owner client; if any of the fighter belongs to the local
-     * player, returns the local player. If not, returns a local bot if any of the
-     * fighters belongs to that; finally, returns the owner of a random one of the
-     * fighters.
+     * Returns a likely owner client; if any of the fighter belongs to the local player, returns the local player. If
+     * not, returns a local bot if any of the fighters belongs to that; finally, returns the owner of a random one of
+     * the fighters.
      */
     private Player createSquadronOwner(Collection<Entity> entities) {
         if (entities.stream().anyMatch(e -> e.getOwner().equals(localPlayer()))) {
@@ -1123,12 +1119,13 @@ public class LobbyActions {
                 }
             }
         }
-        return entities.stream().map(Entity::getOwner).findAny().get();
+
+        Optional<Player> optionalPlayer = entities.stream().map(Entity::getOwner).findAny();
+        return optionalPlayer.orElseGet(this::localPlayer);
     }
 
     /**
-     * Shows a non-modal dialog window with the Strategic BattleForce stats of the
-     * given forces.
+     * Shows a non-modal dialog window with the Strategic BattleForce stats of the given forces.
      */
     void showSbfView(Collection<Force> fo) {
         if (fo.stream().anyMatch(f -> !SBFFormationConverter.canConvertToSbfFormation(f, lobby.game()))) {
@@ -1139,17 +1136,15 @@ public class LobbyActions {
     }
 
     /**
-     * Shows a non-modal dialog window with the AlphaStrike stats of the given
-     * entities.
+     * Shows a non-modal dialog window with the AlphaStrike stats of the given entities.
      */
     void showAlphaStrikeView(Collection<Entity> en) {
         new ASStatsDialog(frame(), en).setVisible(true);
     }
 
     /**
-     * Performs standard checks for updates (units must be present, visible,
-     * editable, and player is not done)
-     * and returns false if that's not the case. Also shows an error message dialog.
+     * Performs standard checks for updates (units must be present, visible, editable, and player is not done) and
+     * returns false if that's not the case. Also shows an error message dialog.
      */
     private boolean validateUpdate(Collection<Entity> entities) {
         if (entities.isEmpty()) {
@@ -1163,7 +1158,7 @@ public class LobbyActions {
             LobbyErrors.showCannotViewHidden(frame());
             return false;
         }
-        
+
         if (localPlayer().isDone()) {
             LobbyErrors.showCannotEditWhileDone(frame());
             return false;
@@ -1172,52 +1167,53 @@ public class LobbyActions {
     }
 
     /**
-     * Sends the entities in the given Collection to the Server.
-     * Sends only those that can be edited, i.e. the player's own
-     * or his bots' units. Will separate the units into update
-     * packets for the local player and any local bots so that the
-     * server accepts all changes (as the server does not know of
-     * local bots and rejects updates that are not for the sending client
-     * or its teammates.
+     * Sends the entities in the given Collection to the Server. Sends only those that can be edited, i.e. the player's
+     * own or his bots' units. Will separate the units into update packets for the local player and any local bots so
+     * that the server accepts all changes (as the server does not know of local bots and rejects updates that are not
+     * for the sending client or its teammates).
      */
     void sendUpdates(Collection<Entity> entities) {
         // Gather the necessary sending clients; this list may contain null if some
         // units
-        // cannot be affected at all, i.e. are enemies to localplayer and all his bots
-        List<Client> senders = entities.stream().map(this::correctSender).distinct().collect(toList());
+        // cannot be affected at all, i.e. are enemies to local player and all his bots
+        List<Client> senders = entities.stream().map(this::correctSender).distinct().toList();
         for (Client sender : senders) {
             if (sender == null) {
                 continue;
             }
-            sender.sendUpdateEntity(
-                    new ArrayList<>(entities.stream().filter(e -> correctSender(e).equals(sender)).collect(toList())));
+            sender.sendUpdateEntity(new ArrayList<>(entities.stream()
+                                                          .filter(e -> Objects.equals(correctSender(e), sender))
+                                                          .collect(toList())));
         }
     }
 
     /**
-     * Sends the entities and forces in the given Collections to the Server.
-     * Sends only those that can be edited, i.e. the player's own
-     * or his bots' units. Will separate the units into update
-     * packets for the local player and any local bots so that the
-     * server accepts all changes (as the server does not know of
-     * local bots and rejects updates that are not for the sending client
-     * or its teammates.
+     * Sends the entities and forces in the given Collections to the Server. Sends only those that can be edited, i.e.
+     * the player's own or his bots' units. Will separate the units into update packets for the local player and any
+     * local bots so that the server accepts all changes (as the server does not know of local bots and rejects updates
+     * that are not for the sending client or its teammates).
+     *
+     * @deprecated no indicated uses.
      */
+    @Deprecated(since = "0.50.05", forRemoval = true)
     void sendUpdates(Collection<Entity> changedEntities, Collection<Force> changedForces) {
         // Gather the necessary sending clients; this list may contain null if some
         // units
-        // cannot be affected at all, i.e. are enemies to localplayer and all his bots
+        // cannot be affected at all, i.e. are enemies to local player and all his bots
         Set<Client> senders = new HashSet<>();
-        senders.addAll(changedEntities.stream().map(this::correctSender).distinct().collect(toList()));
-        senders.addAll(changedForces.stream().map(this::correctSender).distinct().collect(toList()));
+        senders.addAll(changedEntities.stream().map(this::correctSender).distinct().toList());
+        senders.addAll(changedForces.stream().map(this::correctSender).distinct().toList());
 
         for (Client sender : senders) {
             if (sender == null) {
                 continue;
             }
-            List<Entity> enList = changedEntities.stream().filter(e -> correctSender(e).equals(sender))
-                    .collect(toList());
-            List<Force> foList = changedForces.stream().filter(f -> correctSender(f).equals(sender)).collect(toList());
+            List<Entity> enList = changedEntities.stream()
+                                        .filter(e -> Objects.equals(correctSender(e), sender))
+                                        .collect(toList());
+            List<Force> foList = changedForces.stream()
+                                       .filter(f -> Objects.equals(correctSender(f), sender))
+                                       .collect(toList());
 
             if (foList.isEmpty()) {
                 sender.sendUpdateEntity(enList);
@@ -1227,18 +1223,20 @@ public class LobbyActions {
         }
     }
 
+    /**
+     * @deprecated no indicated uses.
+     */
+    @Deprecated(since = "0.50.05", forRemoval = true)
     void sendSingleUpdate(Collection<Entity> changedEntities, Collection<Force> changedForces) {
         if (!areAllied(changedEntities, changedForces)) {
             logger.error("Cannot send force update unless all changed entities and forces are allied!");
-            return;
         }
 
     }
 
     /**
-     * Returns the best sending client for an update of the given entity or
-     * null if none can be found (entity is an enemy to the local player and all his
-     * bots)
+     * Returns the best sending client for an update of the given entity or null if none can be found (entity is an
+     * enemy to the local player and all his bots)
      */
     private Client correctSender(Entity entity) {
         Player owner = entity.getOwner();
@@ -1260,9 +1258,8 @@ public class LobbyActions {
     }
 
     /**
-     * Returns the best sending client for an update of the given force or
-     * null if none can be found (force is an enemy to the local player and all his
-     * bots)
+     * Returns the best sending client for an update of the given force or null if none can be found (force is an enemy
+     * to the local player and all his bots)
      */
     private Client correctSender(Force force) {
         Player owner = game().getForces().getOwner(force);
@@ -1283,29 +1280,27 @@ public class LobbyActions {
     }
 
     /**
-     * Returns true when the given entity may be configured by the local player,
-     * i.e. if it is his own unit or one of his bot's units.
-     * <P>
-     * Note that this is more restrictive than the Server is. The Server
-     * accepts entity changes also for teammates so that entity updates that
-     * signal transporting a teammate's unit don't get rejected.
-     * I think it's important to generally limit entity changes by other players
-     * to avoid collisions of updates.
+     * Returns true when the given entity may be configured by the local player, i.e. if it is his own unit or one of
+     * his bot's units.
+     * <p>
+     * Note that this is more restrictive than the Server is. The Server accepts entity changes also for teammates so
+     * that entity updates that signal transporting a teammate's unit don't get rejected. I think it's important to
+     * generally limit entity changes by other players to avoid collisions of updates.
      * TODO: A possible enhancement might be a GM mode for MM, where only one
      * player is allowed to change everything.
      */
     boolean isEditable(Entity entity) {
         boolean localGM = client().getLocalPlayer().isGameMaster();
-        return localGM
-                || client().getBots().containsKey(entity.getOwner().getName())
-                || (entity.getOwnerId() == localPlayer().getId())
-                || (entity.partOfForce() && isSelfOrLocalBot(game().getForces().getOwner(entity.getForceId())))
-                || (entity.partOfForce() && isEditable(game().getForces().getForce(entity)));
+        return localGM ||
+                     client().getBots().containsKey(entity.getOwner().getName()) ||
+                     (entity.getOwnerId() == localPlayer().getId()) ||
+                     (entity.partOfForce() && isSelfOrLocalBot(game().getForces().getOwner(entity.getForceId()))) ||
+                     (entity.partOfForce() && isEditable(game().getForces().getForce(entity)));
     }
 
     /**
-     * Returns true when the given entity may NOT be configured by the local player,
-     * i.e. if it is not own unit or one of his bot's units.
+     * Returns true when the given entity may NOT be configured by the local player, i.e. if it is not own unit or one
+     * of his bot's units.
      *
      * @see #isEditable(Entity)
      */
@@ -1314,8 +1309,8 @@ public class LobbyActions {
     }
 
     /**
-     * Returns true when all given entities may be configured by the local player,
-     * i.e. if they are his own units or one of his bot's units.
+     * Returns true when all given entities may be configured by the local player, i.e. if they are his own units or one
+     * of his bot's units.
      *
      * @see #isEditable(Entity)
      */
@@ -1324,9 +1319,8 @@ public class LobbyActions {
     }
 
     /**
-     * Returns true if the local player can see all of the given entities.
-     * This is true except when a blind drop option is active and one or more
-     * of the entities are not on his team.
+     * Returns true if the local player can see all the given entities. This is true except when a blind drop option is
+     * active and one or more of the entities are not on his team.
      */
     boolean canSeeAll(Collection<Entity> entities) {
         boolean localGM = client().getLocalPlayer().isGameMaster();
@@ -1336,6 +1330,10 @@ public class LobbyActions {
         return entities.stream().noneMatch(this::isLocalEnemy);
     }
 
+    /**
+     * @deprecated no indicated uses
+     */
+    @Deprecated(since = "0.50.05", forRemoval = true)
     boolean entityInLocalTeam(Entity entity) {
         return !localPlayer().isEnemyOf(entity.getOwner());
     }
@@ -1350,17 +1348,19 @@ public class LobbyActions {
     }
 
     /**
-     * A force is editable to the local player if any forces in its force chain
-     * (this includes the force itself) is owned by the local player or one of the
-     * local bots. This allows editing forces of other players if they are a
-     * subforce
-     * of a local/bot force.
+     * A force is editable to the local player if any forces in its force chain (this includes the force itself) is
+     * owned by the local player or one of the local bots. This allows editing forces of other players if they are a sub
+     * force of a local/bot force.
      */
     boolean isEditable(Force force) {
         List<Force> chain = game().getForces().forceChain(force);
         return chain.stream().map(f -> game().getForces().getOwner(f)).anyMatch(this::isSelfOrLocalBot);
     }
 
+    /**
+     * @deprecated no indicated uses.
+     */
+    @Deprecated(since = "0.50.05", forRemoval = true)
     boolean isEditable(int forceId) {
         return game().getForces().contains(forceId) && isEditable(game().getForces().getForce(forceId));
     }
@@ -1370,18 +1370,17 @@ public class LobbyActions {
     }
 
     /**
-     * Returns true if no two of the given entities are enemies. This is
-     * true when all entities belong to a single player. If they belong to
-     * different players, it is true when all belong to the same team and
-     * that team is one of Teams 1 through 5 (not "No Team").
-     * <P>
-     * Returns true when entities is empty or has only one entity. The case of
-     * entities being empty should be considered by the caller.
+     * Returns true if no two of the given entities are enemies. This is true when all entities belong to a single
+     * player. If they belong to different players, it is true when all belong to the same team and that team is one of
+     * Teams 1 through 5 (not "No Team").
+     * <p>
+     * Returns true when entities is empty or has only one entity. The case of entities being empty should be considered
+     * by the caller.
      */
     private boolean areAllied(Collection<Entity> entities) {
         if (entities.isEmpty()) {
             logger.warn(
-                    "Empty collection of entities received, cannot determine if no entities are all allied. Returning true.");
+                  "Empty collection of entities received, cannot determine if no entities are all allied. Returning true.");
             return true;
         }
         Entity randomEntry = entities.stream().findAny().get();
@@ -1389,9 +1388,7 @@ public class LobbyActions {
     }
 
     /**
-     * Returns true if no two of the given entities and forces are enemies. Also
-     * checks
-     * between forces and entities.
+     * Returns true if no two of the given entities and forces are enemies. Also checks between forces and entities.
      *
      * @see #areAllied(Collection)
      * @see #areForcesAllied(Collection)
@@ -1399,7 +1396,7 @@ public class LobbyActions {
     private boolean areAllied(Collection<Entity> entities, Collection<Force> forces) {
         if (entities.isEmpty() && forces.isEmpty()) {
             logger.warn(
-                    "Empty collection of entities and forces received, cannot determine if these are allied. Returning true.");
+                  "Empty collection of entities and forces received, cannot determine if these are allied. Returning true.");
             return true;
         }
         if (forces.isEmpty()) {
@@ -1417,18 +1414,16 @@ public class LobbyActions {
     }
 
     /**
-     * Returns true if no two of the given forces are enemies. This is
-     * true when all forces belong to a single player. If they belong to
-     * different players, it is true when all belong to the same team and
-     * that team is one of Teams 1 through 5 (not "No Team").
-     * <P>
-     * Returns true when forces is empty or has only one force. The case of
-     * forces being empty should be considered by the caller.
+     * Returns true if no two of the given forces are enemies. This is true when all forces belong to a single player.
+     * If they belong to different players, it is true when all belong to the same team and that team is one of Teams 1
+     * through 5 (not "No Team").
+     * <p>
+     * Returns true when forces is empty or has only one force. The case of forces being empty should be considered by
+     * the caller.
      */
     private boolean areForcesAllied(Collection<Force> forces) {
         if (forces.isEmpty()) {
-            logger
-                    .warn("Empty collection of forces received, cannot determine if these are allied. Returning true.");
+            logger.warn("Empty collection of forces received, cannot determine if these are allied. Returning true.");
             return true;
         }
         Force randomEntry = forces.stream().findAny().get();
